updated Investor Links

--- a/investment/templates/investment/base.html
+++ b/investment/templates/investment/base.html
@@ -117,10 +117,14 @@
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
             <h1 class="h2">Dashboard</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
-              <div class="btn-group mr-2">
-                <a href="{% url 'add_investor'%}">Add Investor</a>
-                <a href="{% url 'add_institution'%}">Add Institution</a>
-              </div>
+              <ul class="nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'add_investor'%}">Add Investor</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'add_institution'%}">Add Institution</a>
+                </li>
+              </ul>
               <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
                 <span data-feather="calendar"></span>
                 This week
